# skill2adk

./: .gitignore  README.md  download_s3.py  pyproject.toml
escher-adk-packages/domain.billing.cost/: agent_registry.json
escher-adk-packages/domain.billing.cost/guardrails/: billing.never_fabricate_cost_data.json
escher-adk-packages/domain.billing.cost/skills/: billing.cost_query.json
escher-adk-packages/domain.compliance.audit/: agent_registry.json
escher-adk-packages/domain.compliance.audit/guardrails/: compliance.never_fabricate_audit_findings.json
escher-adk-packages/domain.compliance.audit/skills/: compliance.gdpr_audit.json  compliance.hipaa_audit.json  compliance.iso27001_audit.json  compliance.pci_dss_audit.json  compliance.soc2_audit.json
escher-adk-packages/domain.operations.monitoring/: agent_registry.json
escher-adk-packages/domain.operations.monitoring/guardrails/: operations.never_fabricate_metric_findings.json
escher-adk-packages/domain.operations.monitoring/skills/: operations.infrastructure_monitor.json
escher-adk-packages/domain.security.iam/: agent_registry.json
escher-adk-packages/domain.security.iam/guardrails/: security.never_fabricate_iam_findings.json
escher-adk-packages/domain.security.iam/skills/: security.cloudtrail_events.json  security.iam_access_path.json  security.iam_security_audit.json
skill2adk/: __init__.py  cli.py  generator.py  inference.py  ingest.py  models.py
skill2adk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
spec/: package_format.md
(+39 files in other folders)
